updated create event service and controller and updated swagger
