# swagger.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.0
 info:
-  title: MEN REST API TUT
-  description: MongoDB ExpressJS NodeJS REST API tutorial
+  title: MEN REST API - Events
+  description: MongoDB ExpressJS NodeJS REST API Typescript
   version: 1.0.0
 servers:
   - url: http://localhost:4000/api/
@@ -17,31 +17,122 @@ components:
     Event:
       type: object
       properties:
-        id:
+        _id:
           type: string
-        name:
+        title:
           type: string
         description:
           type: string
         startDate:
           type: string
-          format: date
+          format: date-time
         endDate:
           type: string
-          format: date
+          format: date-time
         address:
           type: string
+        isArchived:
+          type: boolean
+        createdBy:
+          type: string
+        createdAt:
+          type: string
+          format: date-time
+        updatedAt:
+          type: string
+          format: date-time
 
     User:
       type: object
       properties:
-        name:
+        firstName:
+          type: string
+        lastName:
           type: string
         email:
           type: string
+          format: email
         password:
           type: string
-        date:
+        birthdate:
+          type: string
+          format: date-time
+        createdAt:
+          type: string
+          format: date-time
+        updatedAt:
+          type: string
+          format: date-time
+
+    ICreateLoginDTO:
+      type: object
+      properties:
+        email:
+          type: string
+          format: email
+          minLength: 6
+          maxLength: 255
+        password:
+          type: string
+          minLength: 6
+          maxLength: 255
+
+    ICreateUserDTO:
+      type: object
+      properties:
+        firstName:
+          type: string
+          minLength: 3
+          maxLength: 255
+        lastName:
+          type: string
+          minLength: 3
+          maxLength: 255
+        email:
+          type: string
+          format: email
+          minLength: 6
+          maxLength: 255
+        password:
+          type: string
+          minLength: 6
+          maxLength: 255
+        birthdate:
+          type: string
+          format: date-time
+
+    ICreateEventDTO:
+      type: object
+      properties:
+        title:
+          type: string
+        description:
+          type: string
+        startDate:
+          type: string
+          format: date-time
+        endDate:
+          type: string
+          format: date-time
+        address:
+          type: string
+
+    IUpdateEventDTO:
+      type: object
+      properties:
+        _id:
+          type: string
+        title:
+          type: string
+        description:
+          type: string
+        startDate:
+          type: string
+          format: date-time
+        endDate:
+          type: string
+          format: date-time
+        address:
           type: string
 
 paths:
@@ -49,6 +140,8 @@ paths:
     post:
       summary: Register a new User
       description: Register a new User in the database
+      tags:
+        - user
       requestBody:
         required: true
         content:
@@ -73,17 +166,14 @@ paths:
     post:
       summary: Login a User
       description: Login a User in order to get JWT token (auth-token)
+      tags:
+        - user
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              type: object
-              properties:
-                email:
-                  type: string
-                password:
-                  type: string
+              $ref: "#/components/schemas/ICreateLoginDTO"
 
       responses:
         200:
@@ -102,6 +192,17 @@ paths:
     get:
       summary: Retrieves a list of Events
       description: Retrieves a list of Events as JSON objects.
+      tags:
+        - event
+      security:
+        - ApiKeyAuth: []
+      parameters:
+        - in: query
+          name: isArchived
+          description: This way you can fetch events that are either in the past or in the future.
+          schema:
+            type: boolean
+          required: false
       responses:
         200:
           description: A list of event JSON objects in an array.
@@ -115,6 +216,8 @@ paths:
     post:
       summary: Create a new Event
       description: Create a new Event
+      tags:
+        - event
       security:
         - ApiKeyAuth: []
       requestBody:
@@ -122,7 +225,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/Event"
+              $ref: "#/components/schemas/ICreateEventDTO"
 
       responses:
         201:
@@ -131,11 +234,47 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Event"
+  /event/date/{date}:
+    get:
+      summary: Retrieves a list of Events for a period of either a week/month/year by a date
+      description: Retrieves a list of Events for a period of either a week/month/year by a date
+      tags:
+        - event
+      security:
+        - ApiKeyAuth: []
+      parameters:
+        - in: path
+          name: date
+          required: true
+          description: Selected date
+          schema:
+            type: string
+            format: date
+        - in: query
+          name: datePrecision
+          description: Description of by which time period, you want to fetch the events
+          schema:
+            type: string
+            enum: [week, month, year]
+          required: false
+      responses:
+        200:
+          description: A list of event JSON objects in an array.
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Event"
 
   /events/{id}:
     get:
       summary: Specific Event
       description: Retrieves a specific Event based on it id.
+      tags:
+        - event
+      security:
+        - ApiKeyAuth: []
       parameters:
         - in: path
           name: id
@@ -156,6 +295,8 @@ paths:
     put:
       summary: Updates a specific Event
       description: Updates a specific Event based on it id
+      tags:
+        - event
       security:
         - ApiKeyAuth: []
       parameters:
@@ -170,7 +311,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/Event"
+              $ref: "#/components/schemas/IUpdateEventDTO"
 
       responses:
         201:
@@ -183,6 +324,8 @@ paths:
     delete:
       summary: Deletes a specific Event
       description: Deletes a specific Event based on it id
+      tags:
+        - event
       security:
         - ApiKeyAuth: []
       parameters:
